<resources>
    <string name="app_name">Movesasa</string>
    <string name="add_post">Add Post</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="done">Done</string>
    <string name="post">Post</string>
    <string name="likes">Likes</string>
    <string name="_0">0</string>
    <string name="post_description">Post Description</string>
    <string name="post_title">Post Title</string>
    <string name="date_posted">Date Posted</string>
    <string name="time_posted">Time Posted</string>
    <string name="blogger_s_name">Blogger\'s Name</string>
    <string name="delete_post">Delete Post</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="label_phone_auth">Phone Authentication</string>
    <string name="label_manage_user">Manage User</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_photo">Photo URL</string>
    <string name="anonymous_signin">Anonymous Sign In</string>
    <string name="account_link">Account Linking</string>
    <string name="account_link_btn">Link Account</string>
    <string name="title_provider">User\'s provider</string>
    <string name="title_profile">User\'s profile</string>
    <string name="title_update_profile">Update user\'s profile</string>
    <string name="title_update_email">Update user\'s email</string>
    <string name="title_update_password">Update user\'s password</string>
    <string name="title_send_password_reset">Send password reset</string>
    <string name="title_delete_user">Delete a user</string>
    <string name="updated">%s updated.</string>
    <string name="verify">Verify</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="usertype">User Type</string>
    <string name="usertype_options">User Type (Mover or Client)</string>
    <string name="top_image">Top Image</string>
    <string name="text_image">Text Image</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="logo_image">logo_image</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up"><![CDATA[Don\'t Have An Account? SIGN UP]]></string>
    <string name="hello_welcome">Hello There!</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new journey</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome">Welcome!</string>
    <string name="start_your_journey">Start Your\nJourney</string>
    <string name="owner_s_username">Owner\'s Username</string>
    <string name="my_profile">My Profile</string>
    <string name="username">Username</string>
    <string name="medical_records">Medical Records</string>
    <string name="book_appointments">Book Appointments</string>
    <string name="bills_and_payments">Bills and Payments</string>
    <string name="find_us">Find Us</string>
    <string name="janice_malu">Janice Malu</string>
    <string name="jannnnnn_malu">jannnnnn.malu</string>
    <string name="update">Update</string>
    <string name="medi_app">Medi App</string>
    <string name="book_your_appointment">Book Your\nAppointment</string>
    <string name="specialities">Specialities</string>
    <string name="your_appointments">Your Booked\nAppointments</string>
    <string name="make_your_payments">Make Your\nPayments</string>
    <string name="select_your_payment_method">Select your payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="m_pesa">M-pesa</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="slider_title">Slider Title</string>
    <string name="slider_description">Slider Description</string>

    <string name="first_slide_title">Easily Move Household / Office Items</string>
    <string name="second_slide_title">Quick Moving</string>
    <string name="third_slide_title">The Best Movers</string>

    <string name="first_slide_desc">Moving has never been easier</string>
    <string name="second_slide_desc">All we need is the location and photos of items being moved</string>
    <string name="third_slide_desc">All movers are verified and reduce cases of theft.</string>
    <string name="select_the_type_of_doctor">Select the type of doctor</string>
    <string name="type_of_doctor">Type of doctor</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="the_doctor">The Doctor</string>
    <string name="the_date">The Date</string>
    <string name="the_time">The Time</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_room">Enter Room</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="contact">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="jobs">Jobs</string>
    <string name="mark_muriithi">Mark Muriithi</string>
    <string name="markinyua_gmail_com">markinyua@gmail.com</string>
    <string name="schedule_move">Schedule Move</string>
    <string name="new_location">New Location</string>
    <string name="current_location">Current Location</string>
    <string name="location_example">eg. Langata Freedom Heights</string>
    <string name="moving_date">Moving Date</string>
    <string name="moving_time">Moving Time</string>
    <string name="choose_item_photos">Choose Item Photos</string>
    <string name="ongoing_jobs">Ongoing Jobs</string>
    <string name="accept_available_jobs">Accept Available Jobs</string>
    <string name="company_contacts">Company Contacts</string>

    <string-array name="items_class">
        <item>Client</item>
        <item>Mover</item>

    </string-array>

    <string-array name="items_div_class_1">
        <item>Div 1-A</item>
        <item>Div 1-B</item>
    </string-array>

    <string-array name="items_div_class_2">
        <item>Div 2-A</item>
        <item>Div 2-B</item>
    </string-array>


</resources>